distribute the complete and unmodified libsvm-2.6 with the package

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,7 @@
-SUBDIRS=librna libsvm rnaz models examples man
+SUBDIRS=librna rnaz models examples man
 
 docu_DATA = INSTALL README AUTHORS COPYING TODO
  
-EXTRA_DIST = INSTALL README AUTHORS COPYING TODO 
-  
-docudir = $(pkgdatadir)
+EXTRA_DIST = INSTALL README AUTHORS COPYING TODO libsvm-2.6
 
+docudir = $(pkgdatadir)
