--- a/rnaz/Makefile.am
+++ b/rnaz/Makefile.am
@@ -1,10 +1,12 @@
 bin_PROGRAMS = RNAz
 
-RNAz_SOURCES=RNAz.c svm_helper.c svm_helper.h zscore.c zscore.h
+RNAz_SOURCES=RNAz.c svm_helper.c svm_helper.h zscore.c zscore.h 
 
-LDADD = -L../librna -lRNA -L../libsvm -lsvm -lm
+nodist_RNAz_SOURCES=../libsvm-2.6/svm.cpp
+
+LDADD = -L../librna -lRNA -lm
  
 RNAz_LINK = $(CXX) -o $@
  
-INCLUDES = -I../librna -I../libsvm
+INCLUDES = -I../librna -I../libsvm-2.6
 
