--- a/models/Makefile.am
+++ b/models/Makefile.am
@@ -1,6 +1,6 @@
-models_DATA = decision.model mfe_avg.model mfe_stdv.model 
+models_DATA = decision.model mfe_avg.model mfe_stdv.model strand.model 
 
-EXTRA_DIST = decision.model mfe_avg.model mfe_stdv.model 
+EXTRA_DIST = decision.model mfe_avg.model mfe_stdv.model strand.model
 
 modelsdir = $(pkgdatadir)/models
 
