--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,6 +1,6 @@
-examples_DATA = miRNA.aln snoRNA.aln tRNA.aln IRE.aln 
+examples_DATA = miRNA.maf unknown.aln snoRNA.aln tRNA.aln tRNA.maf IRE.aln
 
-EXTRA_DIST = miRNA.aln snoRNA.aln tRNA.aln IRE.aln
+EXTRA_DIST = miRNA.maf unknown.aln snoRNA.aln tRNA.aln tRNA.maf IRE.aln
   
 examplesdir = $(pkgdatadir)/examples
   
