--- a/perl/Makefile.am
+++ b/perl/Makefile.am
@@ -4,7 +4,7 @@ pm_DATA=RNAz.pm
 
 pmdir=$(pkgdatadir)/perl
 
-pscript = randomizeAln.pl rnazBEDsort.pl rnazBlast.pl rnazFilter.pl rnazMAF2BED.pl rnazWindow.pl rnazAnnotate.pl rnazBEDstats.pl rnazCluster.pl rnazIndex.pl rnazSort.pl selectSeqs.pl
+pscript = rnazRandomizeAln.pl rnazBEDsort.pl rnazBlast.pl rnazFilter.pl rnazMAF2BED.pl rnazWindow.pl rnazAnnotate.pl rnazBEDstats.pl rnazCluster.pl rnazIndex.pl rnazSort.pl rnazSelectSeqs.pl
 
 pkgbin_SCRIPTS = $(pscript) 
 
