--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 SUBDIRS=librna rnaz perl models examples man
 
-docu_DATA = INSTALL README AUTHORS COPYING TODO
+docu_DATA = INSTALL README AUTHORS COPYING TODO manual.pdf
  
-EXTRA_DIST = INSTALL README AUTHORS COPYING TODO libsvm-2.8
+EXTRA_DIST = INSTALL README AUTHORS COPYING TODO manual.pdf libsvm-2.8
 
 docudir = $(pkgdatadir)
