Changed from CVS to git and commited all changes since last CVS checkin.

--- a/librna/Makefile.am
+++ b/librna/Makefile.am
@@ -1,7 +1,7 @@
 noinst_LIBRARIES = libRNA.a
  
 libRNA_a_SOURCES =  fold_vars.c read_epars.c \
-        energy_par.c utils.c fold.c params.c alifold.c PS_dot.c aln_util.c naview.c 
+        energy_par.c utils.c fold.c params.c alifold.c PS_dot.c aln_util.c naview.c circfold.inc alicircfold.inc
 
 noinst_HEADERS =alifold.h energy_const.h fold.h\
         intloops.h params.h utils.h energy_par.h fold_vars.h\
