Various things for version 2.1:
* removed --show-gaps option because it was never useful not
  to use this option
* Made dinucleotide model the default
* Added rnazOutputSort.pm
* Updated manpages and manual

--- a/models/Makefile.am
+++ b/models/Makefile.am
@@ -1,6 +1,23 @@
-models_DATA = decision.model mfe_avg.model mfe_stdv.model strand.model 
+#models_DATA = decision.model mfe_avg.model mfe_stdv.model strand.model 
 
-EXTRA_DIST = decision.model mfe_avg.model mfe_stdv.model strand.model
+models_DATA = decision_dinucleotide.inc L50-200_GC40-46_avg.inc L50-200_GC60-66_stdv.inc\
+decision_dinucleotide_structural.inc L50-200_GC40-46_stdv.inc L50-200_GC66-70_avg.inc\
+decision.inc L50-200_GC46-50_avg.inc L50-200_GC66-70_stdv.inc L50-200_GC20-30_avg.inc\
+L50-200_GC46-50_stdv.inc L50-200_GC70-80_avg.inc L50-200_GC20-30_stdv.inc L50-200_GC50-56_avg.inc\
+L50-200_GC70-80_stdv.inc L50-200_GC30-36_avg.inc L50-200_GC50-56_stdv.inc mfe_avg.inc\
+L50-200_GC30-36_stdv.inc L50-200_GC56-60_avg.inc mfe_stdv.inc L50-200_GC36-40_avg.inc\
+L50-200_GC56-60_stdv.inc strand.inc L50-200_GC36-40_stdv.inc L50-200_GC60-66_avg.inc
+
+#EXTRA_DIST = decision.model mfe_avg.model mfe_stdv.model strand.model
+
+EXTRA_DIST = decision_dinucleotide.inc L50-200_GC40-46_avg.inc L50-200_GC60-66_stdv.inc\
+decision_dinucleotide_structural.inc L50-200_GC40-46_stdv.inc L50-200_GC66-70_avg.inc\
+decision.inc L50-200_GC46-50_avg.inc L50-200_GC66-70_stdv.inc L50-200_GC20-30_avg.inc\
+L50-200_GC46-50_stdv.inc L50-200_GC70-80_avg.inc L50-200_GC20-30_stdv.inc L50-200_GC50-56_avg.inc\
+L50-200_GC70-80_stdv.inc L50-200_GC30-36_avg.inc L50-200_GC50-56_stdv.inc mfe_avg.inc\
+L50-200_GC30-36_stdv.inc L50-200_GC56-60_avg.inc mfe_stdv.inc L50-200_GC36-40_avg.inc\
+L50-200_GC56-60_stdv.inc strand.inc L50-200_GC36-40_stdv.inc L50-200_GC60-66_avg.inc
+
 
 modelsdir = $(pkgdatadir)/models
 
