fixed RNAz installation bugs with ronny
adapted libsvm API usage to version 3.x
libsvm version number is now set in configure.ac:
added libsvm-3.17 sources
removed libsvm-* from .gitignore

--- a/configure.ac
+++ b/configure.ac
@@ -32,6 +32,9 @@ AC_PROG_INSTALL
 
 AC_CONFIG_HEADERS(config.h) 
 
+# this is libsvm stuff
+AC_SUBST([LIBSVM_VERSION],[3.17])
+
 AC_OUTPUT([Makefile librna/Makefile rnaz/Makefile  perl/Makefile models/Makefile examples/Makefile man/Makefile])
 
 
