Fixed make dist stuff
included new rnazMafSplit.pl in distribution

--- a/perl/Makefile.am
+++ b/perl/Makefile.am
@@ -4,7 +4,10 @@ pm_DATA=RNAz.pm
 
 pmdir=$(pkgdatadir)/perl
 
-pscript = rnazRandomizeAln.pl rnazBEDsort.pl rnazBlast.pl rnazFilter.pl rnazMAF2BED.pl rnazWindow.pl rnazAnnotate.pl rnazBEDstats.pl rnazCluster.pl rnazIndex.pl rnazSort.pl rnazSelectSeqs.pl
+pscript = rnazRandomizeAln.pl rnazBEDsort.pl rnazBlast.pl rnazFilter.pl \
+          rnazMAF2BED.pl rnazWindow.pl rnazAnnotate.pl rnazBEDstats.pl  \
+          rnazCluster.pl rnazIndex.pl rnazSort.pl rnazSelectSeqs.pl     \
+          rnazMafSplit.pl
 
 pkgbin_SCRIPTS = $(pscript) 
 
