Distribute and install new additional perl scripts

--- a/perl/Makefile.am
+++ b/perl/Makefile.am
@@ -4,10 +4,33 @@ pm_DATA=RNAz.pm
 
 pmdir=$(pkgdatadir)/perl
 
-pscript = rnazRandomizeAln.pl rnazBEDsort.pl rnazBlast.pl rnazFilter.pl \
-          rnazMAF2BED.pl rnazWindow.pl rnazAnnotate.pl rnazBEDstats.pl  \
-          rnazCluster.pl rnazIndex.pl rnazSort.pl rnazSelectSeqs.pl     \
-          rnazMafSplit.pl
+pscript = \
+    convertMaf.pl \
+    extractMAFblock.pl \
+    mafStats.pl \
+    mpi.pl \
+    rnazAnnotate.pl \
+    rnazBEDsort.pl \
+    rnazBEDstats.pl \
+    rnazBlast.pl \
+    rnazCluster.pl \
+    rnazCMsearch.pl \
+    rnazFilter.pl \
+    rnazIndex.pl \
+    rnazMAF2BED.pl \
+    rnazMaf2Coordinates.pl \
+    rnazMafRenumberMaf.pl \
+    rnazMafSplit.pl \
+    rnazOutputSort.pl \
+    rnazRandomizeAln.pl \
+    rnazSelectSeqs.pl \
+    rnazSliceAlnByPos.pl \
+    rnazSort.pl \
+    rnazWindow_gq.pl \
+    rnazWindow.pl \
+    stats2plot.pl \
+    colorrna.pl \
+    coloraln.pl
 
 pkgbin_SCRIPTS = $(pscript) 
 
